tests/baselines/reference/decoratedDefaultExportsGetExportedUmd.errors.txt
error TS5107: Option 'module=UMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(3,2): error TS2454: Variable 'decorator' is used before being assigned.
b.ts(3,2): error TS2454: Variable 'decorator' is used before being assigned.


!!! error TS5107: Option 'module=UMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    var decorator: ClassDecorator;
    
    @decorator
     ~~~~~~~~~
!!! error TS2454: Variable 'decorator' is used before being assigned.
    export default class Foo {}
    
==== b.ts (1 errors) ====
    var decorator: ClassDecorator;
    
    @decorator
     ~~~~~~~~~
!!! error TS2454: Variable 'decorator' is used before being assigned.
    export default class {}
    